--- a/docs/trapped/styles.css
+++ b/docs/trapped/styles.css
@@ -3,8 +3,7 @@
   src: url("./ServoMono.woff") format('woff');
 }*/
 
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
-
+/*@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');*/
 
 :root {
 
@@ -26,10 +25,6 @@
 
   scrollbar-color: color-mix(in srgb, var(--bg-color) 93%, var(--primary-color)) var(--bg-color);
   scrollbar-width: thin;
-
-/*  font-family: "Roboto Mono", monospace;
-  font-optical-sizing: auto;
-  line-height: 1.2;*/
 }
 
 body {
