--- a/docs/trapped/styles.css
+++ b/docs/trapped/styles.css
@@ -6,6 +6,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
 
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root {
 
   --dark-color: #19120b;
@@ -20,16 +23,17 @@
   margin: 0;
   font-family: monospace;
   color: var(--primary-color);
-  /*font-size: 0.97em;*/
 
   scrollbar-color: darkgray black;
 
   scrollbar-color: color-mix(in srgb, var(--bg-color) 93%, var(--primary-color)) var(--bg-color);
   scrollbar-width: thin;
 
-/*  font-family: "Roboto Mono", monospace;
+  /*font-family: "Source Code Pro", monospace;*/
+  font-family: "Roboto", monospace;
   font-optical-sizing: auto;
-  line-height: 1.2;*/
+  line-height: 1.2;
+  font-size: 0.97em;
 }
 
 body {
@@ -90,7 +94,7 @@ aside textarea {
   width: calc(100% - 1em);
   height: 25vh;
   padding: 0.5em;
-  resize: none;
+  /*resize: none;*/
 }
 aside textarea:active, aside textarea:focus {
   outline: 0
@@ -110,6 +114,11 @@ p {
 
 .invisible {
   opacity: 0;
+}
+
+.icon {
+  display: inline-block;
+  transform: scale(1.7)
 }
 
 #mainConsole {
@@ -144,7 +153,7 @@ p {
   border-right: 1px solid;
 }
 #mainConsoleContent > * {
-  opacity: 0.85;
+  opacity: 0.8;
 }
 
 #mainConsoleContent > *:first-child{
