--- a/docs/styles.css
+++ b/docs/styles.css
@@ -121,7 +121,7 @@ p {
 }
 
 .invisible {
-  opacity: 0;
+  opacity: 0 !important;
 }
 
 .icon {
@@ -161,7 +161,6 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
 }
 
 #mainConsoleContent {
@@ -175,6 +174,30 @@ p {
 
 #mainConsoleContent > *:first-child{
   opacity: 1;
+}
+
+#sleepModal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 1em;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  box-sizing: border-box;
+
+  background: #000;
+  opacity: 0.9;
+  transition: 500ms;
+}
+
+
+
+.actionButton {
+  z-index: 1;
+  position: relative;
 }
 
 
@@ -223,7 +246,13 @@ p.preVisible {
   }
 
   #mainConsolePrimary aside {
-    max-width: 70vh;
+    max-width: 530px;
+  }
+
+  #sleepModal {
+    padding: 2em;
+    justify-content: center;
+    align-items: flex-start;
   }
 
 }
@@ -232,6 +261,16 @@ p.preVisible {
   header {
     font-size: 0.85em;
     padding: 0.5em
+  }
+
+  #sleepModal {
+    padding: 2em;
+  }
+
+}
+@media (max-height: 500px) {
+  #sleepModal {
+    justify-content: flex-end;
   }
 }
 
