--- a/docs/styles.css
+++ b/docs/styles.css
@@ -3,7 +3,7 @@
   src: url("./ServoMono.woff") format('woff');
 }*/
 
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');*/
 
 
 
