--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,43 +1,25 @@
-/*@font-face {
-  font-family: "ServoMono";
-  src: url("./ServoMono.woff") format('woff');
-}*/
-
-/*@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');*/
-
-
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-
   --dark-color: #19120b;
   --light-color: #c1bf9f;
   --bg-color: var(--dark-color);
   --primary-color: var(--light-color);
-  /*--primary-color: #19120b;*/
-  /*--bg-color: #c1bf9f;*/
 }
+
 * {
   padding: 0;
   margin: 0;
   font-family: monospace;
   color: var(--primary-color);
-
   scrollbar-color: darkgray black;
-
   scrollbar-color: color-mix(in srgb, var(--bg-color) 93%, var(--primary-color)) var(--bg-color);
   scrollbar-width: thin;
-
-  /*font-family: "Source Code Pro", monospace;*/
 }
 
 body {
   background: var(--bg-color);
   transition: 0.7s;
   animation: FadeIn 0.5s linear;
-
-  font-family: "Roboto", monospace;
   font-optical-sizing: auto;
   line-height: 1.2;
   font-size: 0.97em;
@@ -107,6 +89,7 @@ h3 {
 
 p {
   margin: 0.75em 0;
+  font-size: 1.1em;
 }
 
 .hidden {
