--- a/docs/styles.css
+++ b/docs/styles.css
@@ -165,7 +165,7 @@ p {
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 1em;
+  padding: 1.5em;
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
@@ -174,6 +174,20 @@ p {
   background: #000;
   opacity: 0.9;
   transition: 500ms;
+}
+
+#landingLogo {
+  transition: 0.3s;
+}
+#landingLogo:hover {
+  filter: drop-shadow(0px 0px 5px #dd00ff);
+}
+
+#steviep {
+  transition: 0.3s;
+}
+#steviep:hover {
+  text-shadow: 0 0 3px #0000ff;
 }
 
 #notepadActions {
